--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 (next release) on (date of next release)
 
+26.11.99 VZ: fixed the bug with double clicking in folder tree in "click to open
+             mode" (wrong folder was opened)
 14.11.99 VZ: added first-time run wizard
 10.11.99 VZ: fixes in folder creation/properties dialogs: buttons are
              enabled/disabled correctly
