--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 (next release) on (date of next release)
 
+??       KB: "Trash" folder added
+27.11.99 VZ: Ok/Cancel/Apply buttons in the options dialog finally work
 26.11.99 VZ: fixed the bug with double clicking in folder tree in "click to open
              mode" (wrong folder was opened)
 14.11.99 VZ: added first-time run wizard
