Zillions of changes, see CHANGES file

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 (next release) on (date of next release)
-
-??       KB: "Trash" folder added
+29.11.99 KB: Filters and application of filter rules added, next_unread button added.
+             Mail collection should now work more intelligently for dialup situations.
+             Better update and selection behaviour for folderview.
+             Network-local folder added, accessible without dial up network.
+             Bugs in event handling fixed.
+             "Trash" folder added. 
 27.11.99 VZ: Ok/Cancel/Apply buttons in the options dialog finally work
 26.11.99 VZ: fixed the bug with double clicking in folder tree in "click to open
              mode" (wrong folder was opened)
