Updated my recent changes.

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 (next release) on (date of next release)
 
+03.12.99 KB: MIME type prompt added to compose view. Started adding filters dialog.
+	     Message threading added. Fixed dialup handling in wxGTK.
 01.12.99 VZ: added support for hidden folder flag        
 29.11.99 KB: Filters and application of filter rules added, next_unread button added.
              Mail collection should now work more intelligently for dialup situations.
